--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 remote=false
 browser=chrome
-baseUrl=http://localhost:4200/
+baseUrl=http://ec2-18-218-136-163.us-east-2.compute.amazonaws.com/
 gridUrl=
 reTry=1
 headlessBrowser=false
